# Neuraops

./: .gitignore  README.md
docker/images/neuraops-agent/: .dockerignore  Dockerfile
docker/images/neuraops-core/: Dockerfile
docker/images/neuraops-ui/: .dockerignore  Dockerfile
docker/neuraops/: .env  README.md  docker-compose.yml
docker/neuraops-agent/: .env  docker-compose.yml
docker/neuraops/sql/: init.sql
neuraops-agent/: .env.example  pyproject.toml
neuraops-agent/config/: agent.yaml
neuraops-agent/src/: __init__.py  agent.py  cli_proxy.py  collector.py  config.py  connector.py  daemon_utils.py  docker_collector.py  executor.py  main.py  utils.py
neuraops-agent/src/agent_cli/: __init__.py  command_executor.py  formatter.py  health_commands.py  system_commands.py
neuraops-agent/src/modules/: __init__.py  agent_exceptions.py  background_loops.py  task_manager.py
neuraops-agent/src/websocket/: __init__.py  command_handler.py  message_types.py
neuraops-core/: .env.example  pyproject.toml  requirements.txt
neuraops-core/data/documentation/: quick-links.yaml  sections.yaml
neuraops-core/data/documentation/templates/ansible/: server-setup.yml
neuraops-core/data/documentation/templates/containers/: docker-basic.dockerfile  docker-compose-stack.yml
neuraops-core/data/documentation/templates/kubernetes/: deployment.yaml
neuraops-core/data/documentation/templates/terraform/: aws-vpc.tf
neuraops-core/data/workflows/deployment/: deploy-webapp.json
neuraops-core/data/workflows/maintenance/: backup-database.json
neuraops-core/data/workflows/monitoring/: system-check.json
neuraops-core/src/: __init__.py  main.py
neuraops-core/src/api/: __init__.py  dependencies.py  lifespan.py  server.py
neuraops-core/src/api/auth/: __init__.py  agent_auth.py  jwt_handler.py  security.py
neuraops-core/src/api/helpers/: __init__.py  middleware.py  routes.py  websockets.py
neuraops-core/src/api/models/: agent.py  agent_command.py  command.py  documentation.py  responses.py  workflow.py
neuraops-core/src/api/routes/: __init__.py  agents.py  agents_ui.py  alerts.py  auth.py  cli.py  commands.py  documentation.py  health.py  metrics.py  system.py  workflows.py  workflows_ui.py
neuraops-core/src/api/services/: __init__.py  agent_cleanup.py  agent_command_service.py  agent_management.py  agent_operations.py  agent_service.py  command_format_service.py  documentation_service.py  workflow_service.py
neuraops-core/src/api/websocket/: __init__.py  agent_handler.py  broadcast.py  cli_handler.py  events.py  manager.py
neuraops-core/src/cli/: __init__.py
neuraops-core/src/cli/commands/: __init__.py  agents.py  demo.py  demo_app.py  health.py  incidents.py  infrastructure.py  logs.py  system.py  workflow_app.py  workflows.py
neuraops-core/src/cli/ui/: __init__.py  components.py
neuraops-core/src/cli/utils/: decorators.py
neuraops-core/src/core/: __init__.py  cache.py  command_classifier.py  command_executor.py  engine.py  structured_output.py
neuraops-core/src/demos/: __init__.py  scenarios.py
neuraops-core/src/demos/sample_data/: README.md
neuraops-core/src/devops_commander/: __init__.py  config.py  exceptions.py
neuraops-core/src/integration/: __init__.py  postgres_client.py  redis_client.py
neuraops-core/src/modules/: __init__.py
neuraops-core/src/modules/ai/: __init__.py  analysis_engine.py  assistant.py  predictive.py  workflows.py
neuraops-core/src/modules/incidents/: __init__.py  detector.py  playbooks.py  responder.py
neuraops-core/src/modules/infrastructure/: __init__.py  analyzer.py  deployment.py  docker.py  kubernetes.py  monitoring.py  templates.py  terraform.py
neuraops-core/src/modules/logs/: __init__.py  analyzer.py  parser.py
neuraops-ui/: .env.example  next.config.js  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json
neuraops-ui/public/: site.webmanifest
neuraops-ui/src/: middleware.ts
neuraops-ui/src/app/: globals.css  layout.tsx  page.tsx
neuraops-ui/src/app/agents/: page.tsx
neuraops-ui/src/app/cli/: page.tsx
neuraops-ui/src/app/documentation/: page.tsx
neuraops-ui/src/app/login/: layout.tsx  page.tsx
neuraops-ui/src/app/monitoring/: page.tsx
neuraops-ui/src/app/settings/: page.tsx
neuraops-ui/src/app/workflows/: page.tsx
neuraops-ui/src/components/: auth-initializer.tsx
neuraops-ui/src/components/features/: index.ts
neuraops-ui/src/components/features/agents/: agents-page-client.tsx
neuraops-ui/src/components/features/cli/: cli-terminal.tsx  dynamic-cli-terminal.tsx  generated-files.tsx
neuraops-ui/src/components/features/dashboard/: dashboard.tsx
neuraops-ui/src/components/features/documentation/: documentation-view.tsx  template-manager.tsx
neuraops-ui/src/components/features/settings/: api-configuration.tsx  settings-page-client.tsx
neuraops-ui/src/components/features/workflows/: workflows-view.tsx
neuraops-ui/src/components/layout/: dashboard-layout.tsx  header.tsx  sidebar.tsx  user-menu.tsx
neuraops-ui/src/components/monitoring/: monitoring-dashboard.tsx
neuraops-ui/src/components/ui/: auth-error-alert.tsx  avatar.tsx  badge.tsx  button.tsx  card.tsx  dropdown-menu.tsx  index.ts  input.tsx
neuraops-ui/src/lib/: auth-service.ts  utils.ts
neuraops-ui/src/services/: api-endpoints.ts  api.ts  index.ts
neuraops-ui/src/stores/: agent-store.ts  auth-store.ts  dashboard-store.ts  documentation-store.ts  index.ts  ui-store.ts  workflow-store.ts
neuraops-ui/src/types/: index.ts
scripts/: README.md  build.sh  clean.sh  dev.sh  install.sh
